--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ body{
 padding-top: 60px; 
 }
 #P1 h1{
+    padding-top: 60px;    
 color:white;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-size: 1.4em;
 text-align: center;
 }
 #P1 h2{
-    color:white;
+    color:red;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.4em;
     text-align: center;
@@ -24,7 +25,7 @@ text-align: center;
 #P1 h2:before, h2:after {
 content:'';
 width: 3em;
-border-bottom:white solid;
+border-bottom:red solid;
 display:inline-block;
 vertical-align:middle;
 }
