--- a/accueil.css
+++ b/accueil.css
@@ -1,7 +1,10 @@
 :root {
     --baseColor : #857669;
-    --baseColor2 : #be9671;
+    --baseColor2 : #BBA591;
     --baseGrey : #3A3737;
+    --baseHote : #AE4D26;
+    --contour : 1px 0 0 var(--baseColor2), 1px 1px 0 var(--baseColor2), 0 1px 0 var(--baseColor2), -1px 1px 0 var(--baseColor2), -1px 0 0 var(--baseColor2), -1px -1px 0 var(--baseColor2), 0 -1px 0 var(--baseColor2), 1px -1px 0 var(--baseColor2);
+    --shadow : drop-shadow(0 0 0.1rem crimson);
 
 }
 
@@ -46,11 +49,13 @@ header {
 
 .boutons :hover {
     cursor: pointer;
-    background-color: var(--baseColor2);
-    width : 100%;
-    height : 70px;
-    padding-top: 20px;
-    margin: auto;
+    color: var(--baseColor2);
+}
+
+.boutons a :hover {
+    cursor: pointer;
+    /* opacity: 0.7; */
+    filter: var(--shadow);
 }
 
 .boutons a {
@@ -60,13 +65,19 @@ header {
     text-decoration: none;
     overflow: hidden;
     text-overflow: ellipsis;
+    z-index: 2;
 
+}
+
+#hote a {
+    color: white;
+    text-shadow: var(--contour);
 }
 
 /** FIN NAV BARRE *********** */
 
 .fond {
-    background-image: url("images/fondAccueil.jpg");
+    background-image: url("images/fondAccueil.jpg"); 
     display: flex;
     justify-content: left;
     align-items: normal;
@@ -81,6 +92,26 @@ header {
     right: -3%;
     margin-top: -6%;
     width : 34%;
+}
+
+.fond p {
+    position: absolute;
+    right: 11%;
+    bottom: 3%;
+    text-align: center;
+    text-shadow: 3px 3px 6px black;
+}
+
+.ensemble {
+    font-family: 'century gothic', 'candara', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #F3E2D4;
+    font-size: 3.2em;
+}
+
+.vote {
+    font-family: 'century gothic', 'candara', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #D68C4C;
+    font-size: 2em;
 }
 
 /** FIN HEADER ************** */
