--- a/accueil.css
+++ b/accueil.css
@@ -115,3 +115,25 @@ header {
 }
 
 /** FIN HEADER ************** */
+
+/** FOOTER ******************************************************************* */
+
+footer {    
+    background-color: var(--baseColor);
+    width : 100vv;
+    height: 120px;
+    display: flex;
+}
+
+footer p {
+    margin: 1.5% 6%;
+    font-size: small;
+    color: white;
+}
+
+footer p span {
+    color: var(--baseGrey);
+    font-size: medium;
+}
+
+/** FIN FOOTER ************** */
