--- a/mention.css
+++ b/mention.css
@@ -17,13 +17,12 @@
   }
   
   .background{
-    background-image: url("images/Mr_Jenkins.jpg");
+    background-image: url("Mr_Jenkins.jpg");
     background-size: cover;
     width: 100%;
     height: 100vh;
     
   }
-
 
   /** NAV BARRE ******************************************************************* */
 
@@ -80,25 +79,3 @@
 }
 
 /** FIN NAV BARRE *********** */
-
-/** FOOTER ******************************************************************* */
-
-footer {    
-  background-color: var(--baseColor);
-  width : 100vv;
-  height: 120px;
-  display: flex;
-}
-
-footer p {
-  margin: 1.5% 6%;
-  font-size: small;
-  color: white;
-}
-
-footer p span {
-  color: var(--baseGrey);
-  font-size: medium;
-}
-
-/** FIN FOOTER ************** */
